# kipa

./: .gitignore  README.md  hs.py  kipa.py  n2t.py  pyproject.toml  requirements.txt  setup.py  test.py  utext.py
KIPA.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
kipa/: __init__.py  kipa.py
