[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "kipa"
authors = [{name = "Jagar Yousef", email = "jagar.yousef@gmail.com"}]
readme="README.md"
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/kurd-cc/kipa"
